# PhiJudge

./: LICENSE  PhiJudge.sln  README.md  SECURITY.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
Agent/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  ca.pem  config.yml
Agent/Agent.Linux/: Cargo.toml
Agent/Agent.Windows/Judge/: JudgeProfile.cs
Agent/src/: main.rs
Agent/src/judge/: data_operation.rs  judge_single.rs  mod.rs
Agent/src/managers/: auth_manager.rs  config_manager.rs  connection_manager.rs  judge_manager.rs  mod.rs  server_manager.rs
Agent/src/models/: args.rs  config.rs  judge_point.rs  judge_queue_entry.rs  mod.rs  process_startup_configuration.rs  test_profile.rs
Agent/src/models/communication/: judge_data_reply.rs  judge_data_request.rs  judge_queue.rs  judge_submit.rs  mod.rs  record_data_reply.rs  record_data_request.rs  register_call.rs  register_reply.rs  test_point_data_reply.rs
Agent/src/proto/: mod.rs
Agent/src/routes/: judge.rs
Agent/src/test/: mod.rs  windows_os.rs
Agent/src/utils/: mod.rs  os_process.rs
Agent/src/utils/os_side/: mod.rs  windows_os.cc  windows_os.h
Client/: package-lock.json  package.json
Client/src/: App.js  App.scss  NavBar.js  NavBar.scss  constants.js  index.js  index.scss
Docker/apps/: docker-compose.yml
Docker/phijudge/: docker-compose.yml
Docs/: .gitignore  Dockerfile  README.md  docusaurus.config.ts  package.json  pnpm-lock.yaml
Docs/blog/: authors.yml  (+3 more)
Server/: PhiJudge.Server.csproj  Program.cs  WeatherForecast.cs  appsettings.json
(+387 files in other folders)
