[package]
name = "phijudge-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
async-std = { version = "1.8.0", features = ["attributes"] }
clap = { version = "4.3.3", features = ["derive"] }
singleton-manager = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[build-dependencies]
