[package]
name = "phijudge-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
clap = { version = "4.3.3", features = ["derive"] }
singleton-manager = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[build-dependencies]
